# django-template

./: LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
cycle_data/: apps.py
django_project/: settings.py
